feat: use single option

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,6 @@
-AccessKeyId=minioadmin
+StorageType=s3
+AccessKeyID=minioadmin
 AccessKeySecret=minioadmin
 Endpoint=http://127.0.0.1:9000
 Bucket=test
+Region=cn-north-1
